syntax = "proto3";
package pb;

message FcMessage {
    bytes  PublicKey   = 1;
    string Cid         = 2;
    string LocalPath   = 3;
    uint64 FileSize    = 4;
    uint32 Redundancy  = 5;
    bytes  Funds       = 6;
    uint64 StartAt     = 7;
    uint64 Expiration  = 8;
    string AccountName = 9;
}